# PipelineIQ

./: .agentignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  agents.md  pyproject.toml
.agents/: README.md
.agents/evals/skills/: codebase-scout.yaml  performance-profiler.yaml  pr-reviewer.yaml  push-code-repo.yaml  scaffold-backend-endpoint.yaml  scaffold-db-migration.yaml  scaffold-frontend-component.yaml  security-scanner.yaml
.agents/prompts/: create-component.md  create-endpoint.md  create-migration.md
.agents/rules/: architect.md  ba.md  cicd-expert.md  dba.md  devops.md  fastapi-rules.md  mcp-builder.md  orchestrator.md  pm.md  qa.md  react-rules.md  security.md
.agents/skills/: registry.yaml
.agents/skills/codebase-scout/: SKILL.md
.agents/skills/performance-profiler/: SKILL.md
.agents/skills/pr-reviewer/: SKILL.md
.agents/skills/push-code-repo/: SKILL.md
.agents/skills/scaffold-backend-endpoint/: SKILL.md
.agents/skills/scaffold-db-migration/: SKILL.md
.agents/skills/scaffold-frontend-component/: SKILL.md
.agents/skills/scaffold-mcp-server/: SKILL.md
.agents/skills/security-scanner/: SKILL.md
.agents/workflows/: add-third-party-api.md  create-feature.md  deploy-production.md  discover-codebase.md  fix-bug.md  hotfix.md  onboard-developer.md  refactor.md  run-tests.md  setup-local.md  write-adr.md
.github/workflows/: ci.yml  publish.yml
docs/adrs/: 001-mcp-framework-choice.md
docs/requirements/: requirement.md
src/pipeline_iq/: config.py  server.py
src/pipeline_iq/integrations/: __init__.py  base.py  jenkins_client.py
src/pipeline_iq/resources/: pattern_loader.py  patterns.json
src/pipeline_iq/schemas/: base.py  jenkins.py
tests/: test_client.py  test_sanitizer.py  test_tools.py
(+10 files in other folders)
