[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-iq"
version = "0.1.0"
authors = [
  { name="Dev Joshi", email="joshi.devops@example.com" },
]
description = "A high-performance MCP server for CI/CD failure diagnosis"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "mcp[cli]~=1.2.0",
    "httpx~=0.27.0",
    "pydantic~=2.10.1",
    "pydantic-settings~=2.7.0",
    "loguru~=0.7.2",
]

[project.urls]
Homepage = "https://github.com/dev-joshi-ops/PipelineIQ"
Repository = "https://github.com/dev-joshi-ops/PipelineIQ"
Changelog = "https://github.com/dev-joshi-ops/PipelineIQ/blob/main/CHANGELOG.md"
Issues = "https://github.com/dev-joshi-ops/PipelineIQ/issues"

[project.optional-dependencies]
dev = [
    "pytest~=8.1.0",
    "pytest-asyncio~=0.23.0",
    "respx~=0.21.0",
    "ruff~=0.4.0",
]

[project.scripts]
pipeline-iq = "pipeline_iq.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pipeline_iq = ["**/*.json"]

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
